--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.slevermann.minecraft</groupId>
     <artifactId>coordreminder</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
 
     <repositories>
@@ -41,6 +41,7 @@
             <version>2.9.9.3</version>
         </dependency>
     </dependencies>
+    <!-- Relocate Jackson so that we don't collide with other plugins that also use Jackson -->
     <build>
         <plugins>
             <plugin>
