Read version and description from POM
This way it only needs to be adjusted in one place

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>de.slevermann.minecraft</groupId>
     <artifactId>coordreminder</artifactId>
     <version>1.3.0</version>
-
+    <description>Allows saving and recalling of coordinates</description>
 
     <repositories>
         <repository>
@@ -20,6 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <backups>2</backups>
     </properties>
 
     <dependencies>
@@ -36,4 +37,12 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
