Coordinate sharing and free-form adding
Coordinates can now be shared to all players to tell them about
interesting places. Also, coordinates can be added supplying x, y and z
coordinates, so that one doesn't have to stand at the location of the
coordinate one wants to save.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,6 +11,8 @@ commands:
       /<command>: show current coordinates
       /<command> list: list saved coordinates
       /<command> set [name]: save current coordinates as [name]
+      /<command> set [name] [x] [y] [z]: save coordinate x, y, z as [name]
       /<command> get [name]: get coordinates saved as [name]
+      /<command> share [name]: share coordinates saved as [name] to chat
       /<command> delete [name]: delete coordinates saved as [name]
       /<command> clear: delete all saved coordinates
